--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@intercom/messenger-js-sdk": "^0.0.14",
+    "@mediapipe/tasks-genai": "^0.10.18",
+    "chrome-types": "^0.1.316",
+    "date-fns": "^3.3.1",
+    "firebase": "^10.8.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "firebase": "^10.8.0",
-    "date-fns": "^3.3.1",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
