--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
