--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,19 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
+    }
+  ],
   "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
     {
       "src": "/(.*)\\.js$",
       "headers": { "content-type": "application/javascript" },
@@ -10,6 +23,18 @@
       "src": "/(.*)\\.mjs$",
       "headers": { "content-type": "application/javascript" },
       "dest": "/$1.mjs"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
+      "src": "/favicon.ico",
+      "dest": "/favicon.ico"
+    },
+    {
+      "src": "/manifest.json",
+      "dest": "/manifest.json"
     },
     {
       "src": "/(.*)",
