--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -35,10 +35,16 @@ jobs:
     - name: Run linter
       run: npm run lint
     
-    - name: Run tests
-      run: npm test
+    - name: Run tests with coverage
+      run: npm test -- --coverage
       env:
         CI: true
+    
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        flags: frontend
+        name: frontend-coverage
 
   deploy:
     needs: test
