--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,29 +4,53 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
+      dockerfile: ../docker/frontend/Dockerfile
+      args:
+        - VITE_API_URL=${VITE_API_URL:-http://localhost:5000}
+        - VITE_FIREBASE_API_KEY=${FIREBASE_API_KEY}
+        - VITE_FIREBASE_AUTH_DOMAIN=${FIREBASE_AUTH_DOMAIN}
+        - VITE_FIREBASE_PROJECT_ID=${FIREBASE_PROJECT_ID}
+        - VITE_FIREBASE_STORAGE_BUCKET=${FIREBASE_STORAGE_BUCKET}
+        - VITE_FIREBASE_MESSAGING_SENDER_ID=${FIREBASE_MESSAGING_SENDER_ID}
+        - VITE_FIREBASE_APP_ID=${FIREBASE_APP_ID}
     ports:
-      - "80:80"
+      - "${FRONTEND_PORT:-80}:80"
     depends_on:
-      - backend
-    environment:
-      - VITE_API_URL=http://localhost:5000
-      - VITE_FIREBASE_API_KEY=${FIREBASE_API_KEY}
-      - VITE_FIREBASE_AUTH_DOMAIN=${FIREBASE_AUTH_DOMAIN}
-      - VITE_FIREBASE_PROJECT_ID=${FIREBASE_PROJECT_ID}
-      - VITE_FIREBASE_STORAGE_BUCKET=${FIREBASE_STORAGE_BUCKET}
-      - VITE_FIREBASE_MESSAGING_SENDER_ID=${FIREBASE_MESSAGING_SENDER_ID}
-      - VITE_FIREBASE_APP_ID=${FIREBASE_APP_ID}
+      backend:
+        condition: service_healthy
+    networks:
+      - taxfront-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:80/"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
 
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: ../docker/backend/Dockerfile
     ports:
-      - "5000:5000"
+      - "${BACKEND_PORT:-5000}:5000"
     environment:
-      - FLASK_ENV=production
+      - FLASK_ENV=${FLASK_ENV:-production}
       - FIREBASE_CREDENTIALS=${FIREBASE_CREDENTIALS}
+      - DATABASE_URL=${DATABASE_URL}
     volumes:
-      - ./backend:/app
-      - /app/node_modules
+      - backend_data:/app/data
+    networks:
+      - taxfront-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:5000/health"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+
+networks:
+  taxfront-network:
+    driver: bridge
+
+volumes:
+  backend_data:
