--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -2,12 +2,12 @@ name: Frontend CI/CD
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, 'feature/**' ]
     paths:
       - 'frontend/**'
       - '.github/workflows/frontend.yml'
   pull_request:
-    branches: [ main ]
+    branches: [ main, 'feature/**' ]
     paths:
       - 'frontend/**'
       - '.github/workflows/frontend.yml'
